[gd_scene load_steps=2 format=3 uid="uid://b87vg3w2jx8yk"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.5, 0.8, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Vocab Master"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Learn words the fun way!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start Session"

[node name="ProgressButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "View Progress"

[node name="LoginContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LoginTitle" type="Label" parent="LoginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Welcome Back! üëã"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="LoginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Please enter your password to continue"
horizontal_alignment = 1

[node name="PasswordInput" type="LineEdit" parent="LoginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
placeholder_text = "Enter password..."
secret = true
alignment = 1

[node name="LoginButton" type="Button" parent="LoginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üîê Login"

[node name="ErrorLabel" type="Label" parent="LoginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1
